# ExoGenesis-Omega

./: .gitignore  CHANGELOG.md  COMPLETE_SETUP_SUMMARY.md  FINAL_PUBLICATION_SUCCESS.md  PUBLICATION_EVIDENCE.md  PUBLICATION_SUCCESS_REPORT.md  PUBLISHING_STATUS_REPORT.md  README.md  finish-publish.sh  package-lock.json  package.json
omega/: .gitignore  Cargo.toml  GPU-VIEWER-README.md  GPU-VIEWER-STATUS.md  PUBLISHING_SUMMARY.md  README.md  TEST_VERIFICATION_REPORT.md  VERSION_GUARD_SUMMARY.md  WEB-VS-GPU-COMPARISON.md
omega/crates/omega-agentdb/: Cargo.toml  README.md
omega/crates/omega-agentdb/examples/: benchmark_simd.rs  test_simsimd.rs
omega/crates/omega-agentdb/src/: gnn_index.rs  hnsw.rs  lib.rs  ruvector_integration.rs  rvlite_backend.rs  simd_ops.rs
omega/crates/omega-attention/: Cargo.toml  README.md
omega/crates/omega-attention/src/: controller.rs  lib.rs  mechanisms.rs  salience.rs  working_memory.rs
omega/crates/omega-brain/: Cargo.toml  README.md
omega/crates/omega-brain/src/: attention_system.rs  cognitive_cycle.rs  config.rs  consciousness_core.rs  lib.rs  memory_system.rs  neural_substrate.rs  runtime_adaptation.rs  self_awareness.rs  sleep_system.rs
omega/crates/omega-brain/tests/: integration_tests.rs
omega/crates/omega-consciousness/: Cargo.toml  README.md
omega/crates/omega-consciousness/src/: emergence.rs  free_energy.rs  global_workspace.rs  iit.rs  lib.rs
omega/crates/omega-consciousness/tests/: property_tests.rs
omega/crates/omega-core/: Cargo.toml  README.md
omega/crates/omega-core/src/: lib.rs
omega/crates/omega-examples/: Cargo.toml  README.md
omega/crates/omega-examples/docs/: SELF_AWARENESS_USE_CASES.md
omega/crates/omega-examples/examples/: dream_3d_walkthrough.rs  gpu_world_viewer.rs  interactive_demo.rs  realtime_gpu_pipeline.rs  realtime_streaming_demo.rs  synesthesia_demo.rs  synesthesia_simulation.rs  synesthesia_visualizer.rs  week3_final_integration.rs  week4_optimization_bench.rs
omega/crates/omega-examples/src/: common.rs  dream_problem_solver.rs  dream_problem_solver_backup.rs  lib.rs  loops_demo.rs  project_ouroboros.rs  quantum_gravity_dreamer.rs  self_awareness_demo.rs
omega/crates/omega-hippocampus/: Cargo.toml  README.md
omega/crates/omega-hippocampus/src/: ca1.rs  ca3.rs  dentate_gyrus.rs  entorhinal.rs  lib.rs  place_cells.rs  replay.rs
omega/crates/omega-longevity/: .env.example  .gitignore  Cargo.toml  DATABASE_SETUP.md  DATA_SOURCES.md  ENHANCEMENTS_IMPLEMENTATION_GUIDE.md  FULL_GENOME_ANALYSIS_REPORT.md  GENOME_PERFORMANCE_SUMMARY.md  PERFORMANCE_REPORT.md  QUICKSTART.md  schema.sql
omega/crates/omega-longevity/sql/: 001_create_variants_table.sql  002_add_vector_embeddings.sql  composite_indexes.sql
omega/crates/omega-longevity/src/: attractor_landscape.rs  biomarker_dreamer.rs  causal_discovery.rs  cell.rs  gene_environment.rs  gene_vector_db.rs  genome.rs  genome_scale_db.rs  hallmarks.rs  immortality_engine.rs  lib.rs  lifespan_simulator.rs  organism.rs  research_integrator.rs  senescence_detector.rs  vus_interpreter.rs
omega/crates/omega-longevity/tests/: database_connection_test.rs
omega/crates/omega-loops/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md
omega/crates/omega-loops/src/: coordinator.rs  executor.rs  lib.rs  message_bus.rs  tests.rs
omega/crates/omega-loops/tests/: property_tests.rs
omega/crates/omega-memory/: Cargo.toml  README.md
omega/crates/omega-memory/examples/: basic_usage.rs  consolidation.rs  rvlite_simulation.rs
omega/crates/omega-memory/src/: consolidation.rs  cosmic.rs  individual.rs  lib.rs  query.rs  rvlite_bridge.rs  species.rs  tiers.rs
omega/crates/omega-memory/tests/: integration_tests.rs  property_tests.proptest-regressions  property_tests.rs
omega/crates/omega-meta-sona/: BENCHMARKS.md  Cargo.toml  README.md
omega/crates/omega-meta-sona/examples/: benchmark_demo.rs
omega/crates/omega-meta-sona/src/: lib.rs
omega/crates/omega-mindscape/: Cargo.toml  README.md
omega/crates/omega-mindscape/docs/: USE_CASES.md
omega/crates/omega-persistence/: Cargo.toml  README.md
omega/crates/omega-runtime/: Cargo.toml  README.md
omega/crates/omega-singularity/: Cargo.toml
omega/crates/omega-sleep/: Cargo.toml  README.md
omega/crates/omega-snn/: Cargo.toml  README.md
omega/crates/omega-strange-loops/: Cargo.toml  README.md
omega/crates/omega-synesthesia/: Cargo.toml  README.md
omega/crates/omega-synesthesia-renderer/: Cargo.toml  README.md
omega/crates/omega-synesthesia-streaming/: Cargo.toml  README.md
omega/docs/: BENZENE_DREAM_SOLVER_REPORT.md  CONVENTIONAL_COMMITS.md  DREAM_PROBLEM_SOLVER_REFACTOR_PLAN.md  DREAM_PROBLEM_SOLVER_REVIEW.md  DREAM_SOLVER_REFACTORING_COMPLETE.md  FINAL_IMPROVEMENTS_REPORT.md  HIVE_MIND_REVIEW_REPORT.md  LOOPS_IMPLEMENTATION.md  PR_DESCRIPTION.md  PUBLISHING.md  QUALITY_IMPROVEMENT_SUMMARY.md  QUICK_START_PUBLISHING.md  TEST_SUITE_COMPLETION_SUMMARY.md  USE_CASES.md  VERSIONING_COMPARISON.md  VERSION_GUARD.md
omega/examples/: USE_CASES.md  dream_problem_solver.rs  loops_demo.rs  project-ouroboros.md
omega/examples/digital-twin-social/: .env.example  Cargo.toml  README.md  docker-compose.yml
omega/hive/testing/: coverage.md  recommendations.md  summary.md
omega/scripts/: auto-version-filecount.sh  auto-version.sh  pre-publish-check.sh  publish-crates.sh  version-bump.sh  version-guard.sh
synesthesia/: BUILD.md  Cargo.toml
synesthesia/src/: app.rs  lib.rs  main.rs
synesthesia/src/ai/: mod.rs  prompts.rs  semantic.rs
synesthesia/src/audio/: analyzer.rs  mod.rs  player.rs  whisper.rs
synesthesia/src/music/: analysis.rs  emotion.rs  mod.rs  signal.rs  structure.rs  theory.rs
synesthesia/src/player/: audio_player.rs  mod.rs  renderer.rs  sync.rs  synth_loader.rs  transitions.rs
synesthesia/src/render/: mod.rs  scene.rs
synesthesia/src/revelation/: accumulator.rs  clarity.rs  generator.rs  mod.rs
synesthesia/src/shaders/: mod.rs  revelation.rs  uniforms.rs
synesthesia/src/styles/: mod.rs  presets.rs
synesthesia/src/ui/: mod.rs
synesthesia/tests/: integration_tests.rs
(+316 files in other folders)
