[workspace]
resolver = "2"
members = [
    "crates/omega-core",
    "crates/omega-agentdb",
    "crates/omega-memory",
    "crates/omega-loops",
    "crates/omega-meta-sona",
    "crates/omega-runtime",
    "crates/omega-persistence",
    "crates/omega-snn",
    "crates/omega-attention",
    "crates/omega-consciousness",
    "crates/omega-hippocampus",
    "crates/omega-sleep",
    "crates/omega-strange-loops",
    "crates/omega-brain",
    "crates/omega-examples",
    "examples/digital-twin-social",
]

[workspace.package]
version = "1.1.0"
edition = "2021"
authors = ["ExoGenesis Omega Team"]
license = "MIT"
repository = "https://github.com/prancer-io/ExoGenesis-Omega"
homepage = "https://github.com/prancer-io/ExoGenesis-Omega"
documentation = "https://github.com/prancer-io/ExoGenesis-Omega/tree/main/docs"
keywords = ["ai", "intelligence", "memory", "cognitive", "neural"]
categories = ["science", "algorithms", "data-structures"]

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
rand = "0.8"
