[package]
name = "synesthesia"
version = "0.1.0"
edition = "2021"
description = "AI-driven immersive music visualization platform"
license = "MIT"
authors = ["Synesthesia Team"]

[dependencies]
# Window and Graphics
winit = "0.29"
wgpu = "0.19"
bytemuck = { version = "1.14", features = ["derive"] }
image = "0.24"

# Math
glam = { version = "0.25", features = ["bytemuck"] }
nalgebra = "0.32"

# Audio
rodio = "0.17"
symphonia = { version = "0.5", features = ["all"] }
rubato = "0.14"

# AI/ML Inference
whisper-rs = "0.10"
llama-cpp-rs = { version = "0.1", optional = true }
candle-core = { version = "0.4", optional = true }
candle-transformers = { version = "0.4", optional = true }

# Video Generation (for revelation engine)
hf-hub = { version = "0.3", optional = true }
safetensors = { version = "0.4", optional = true }
tokenizers = { version = "0.15", optional = true }

# Async Runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.1"  # MessagePack for .synth files

# UI
egui = "0.25"
egui-wgpu = "0.25"
egui-winit = "0.25"

# Utilities
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
thiserror = "1.0"
parking_lot = "0.12"
crossbeam-channel = "0.5"
rayon = "1.8"

# Omega Crates (local path)
omega-brain = { path = "../omega/omega-brain", optional = true }
omega-perception = { path = "../omega/omega-perception", optional = true }
omega-language = { path = "../omega/omega-language", optional = true }
omega-emotion = { path = "../omega/omega-emotion", optional = true }
omega-creativity = { path = "../omega/omega-creativity", optional = true }
omega-world = { path = "../omega/omega-world", optional = true }

[features]
default = ["local-llm"]
local-llm = ["llama-cpp-rs"]
candle = ["candle-core", "candle-transformers"]
video-gen = ["candle", "hf-hub", "safetensors", "tokenizers"]
omega = ["omega-brain", "omega-perception", "omega-language", "omega-emotion", "omega-creativity", "omega-world"]
full = ["local-llm", "video-gen", "omega"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1

[[bin]]
name = "synesthesia"
path = "src/main.rs"
