[package]
name = "omega-agentdb"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
instant-distance = "0.6"
ordered-float = "4.2"
simsimd = "5.9"

[dev-dependencies]
tokio-test = "0.4"
