[package]
name = "omega-agentdb"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "SIMD-optimized vector database with HNSW index for agent storage and skill management"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
instant-distance = "0.6"
ordered-float = "4.2"
simsimd = "5.9"

[dev-dependencies]
tokio-test = "0.4"
