[package]
name = "omega-agentdb"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"
description = "Advanced vector database with ruvector integration for agent storage and skill management"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
ordered-float = "4.2"
rand = "0.8"
async-trait = "0.1"

# HNSW index
instant-distance = "0.6"

# RuVector crates - advanced vector database components
ruvector-core = "0.1"
ruvector-gnn = "0.1"
ruvector-graph = "0.1"

# Keep simsimd for backward compatibility
simsimd = "5.9"

[dev-dependencies]
tokio-test = "0.4"
