[package]
name = "omega-examples"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Example applications demonstrating ExoGenesis Omega brain capabilities"
readme = "README.md"

[[bin]]
name = "loops_demo"
path = "src/loops_demo.rs"

[[bin]]
name = "dream_problem_solver"
path = "src/dream_problem_solver.rs"

[[bin]]
name = "quantum_gravity_dreamer"
path = "src/quantum_gravity_dreamer.rs"

[[bin]]
name = "self_awareness_demo"
path = "src/self_awareness_demo.rs"

[[bin]]
name = "project_ouroboros"
path = "src/project_ouroboros.rs"

[[bin]]
name = "mindscape_explorer"
path = "src/bin/mindscape_explorer.rs"

[dependencies]
# Core omega crates
omega-core = { path = "../omega-core" }
omega-loops = { path = "../omega-loops" }
omega-brain = { path = "../omega-brain" }
omega-snn = { path = "../omega-snn" }
omega-attention = { path = "../omega-attention" }
omega-consciousness = { path = "../omega-consciousness" }
omega-hippocampus = { path = "../omega-hippocampus" }
omega-sleep = { path = "../omega-sleep" }
omega-strange-loops = { path = "../omega-strange-loops" }
omega-memory = { path = "../omega-memory" }
omega-meta-sona = { path = "../omega-meta-sona" }
omega-runtime = { path = "../omega-runtime" }
omega-mindscape = { path = "../omega-mindscape" }

# External dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rand = { workspace = true }
