[package]
name = "omega-examples"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Example applications demonstrating ExoGenesis Omega brain capabilities"
readme = "README.md"

[[bin]]
name = "loops_demo"
path = "src/loops_demo.rs"

[[bin]]
name = "quantum_gravity_dreamer"
path = "src/quantum_gravity_dreamer.rs"

[[bin]]
name = "self_awareness_demo"
path = "src/self_awareness_demo.rs"

[[bin]]
name = "project_ouroboros"
path = "src/project_ouroboros.rs"

[[bin]]
name = "mindscape_explorer"
path = "src/bin/mindscape_explorer.rs"

[[bin]]
name = "creative_dream_incubator"
path = "src/bin/creative_dream_incubator.rs"

[[example]]
name = "synesthesia_demo"
path = "examples/synesthesia_demo.rs"

[[example]]
name = "synesthesia_simulation"
path = "examples/synesthesia_simulation.rs"

[[example]]
name = "synesthesia_visualizer"
path = "examples/synesthesia_visualizer.rs"

[dependencies]
# Core omega crates
omega-core = { path = "../omega-core" }
omega-loops = { path = "../omega-loops" }
omega-brain = { path = "../omega-brain" }
omega-snn = { path = "../omega-snn" }
omega-attention = { path = "../omega-attention" }
omega-consciousness = { path = "../omega-consciousness" }
omega-hippocampus = { path = "../omega-hippocampus" }
omega-sleep = { path = "../omega-sleep" }
omega-strange-loops = { path = "../omega-strange-loops" }
omega-memory = { path = "../omega-memory" }
omega-meta-sona = { path = "../omega-meta-sona" }
omega-runtime = { path = "../omega-runtime" }
omega-mindscape = { path = "../omega-mindscape" }
omega-synesthesia = { path = "../omega-synesthesia" }

# External dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rand = { workspace = true }
