[package]
name = "omega-longevity"
version = "0.1.0"
edition = "2021"
description = "Biological longevity research acceleration using Omega Brain cognitive architecture"
license = "MIT"
repository = "https://github.com/ExoGenesis-Omega/omega-longevity"
keywords = ["longevity", "aging", "geroscience", "ai", "drug-discovery"]

[dependencies]
omega-core = { path = "../omega-core" }
omega-snn = { path = "../omega-snn" }
omega-singularity = { path = "../omega-singularity" }
omega-memory = { path = "../omega-memory" }
omega-consciousness = { path = "../omega-consciousness" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
rand = "0.8"
rand_distr = "0.4"
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
petgraph = "0.6"

# Vector database for ultra-fast gene similarity search
# Note: sqlx and pgvector are optional - enable with `vector-db` feature
# Uses ruvector-postgres Docker image: docker.io/ruvnet/ruvector-postgres
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"], optional = true }
pgvector = { version = "0.4", features = ["sqlx"], optional = true }
async-trait = { version = "0.1", optional = true }
flate2 = "1.0"  # For gzip decompression of genome data
dotenv = "0.15"  # For loading .env files
tempfile = "3.8"  # For temporary file creation in batch operations

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
clinical = []  # Enable clinical trial simulation features
omics = []     # Enable multi-omics integration
vector-db = ["sqlx", "pgvector", "async-trait"]  # Enable ruvector-postgres integration
