[package]
name = "omega-loops"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
omega-core = { path = "../omega-core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
parking_lot = "0.12"
rand = "0.8"
itertools = "0.12"
