[package]
name = "omega-loops"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "7 temporal cognitive loops from Reflexive (1ms) to Transcendent (10y) for multi-scale processing"

[dependencies]
omega-core = { version = "1.0.0", path = "../omega-core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
parking_lot = "0.12"
rand = "0.8"
itertools = "0.12"
