[package]
name = "omega-meta-sona"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Self-Optimizing Neural Architecture (META-SONA) with evolutionary search and fitness evaluation"

[dependencies]
omega-core = { version = "0.1.0", path = "../omega-core" }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
uuid = { workspace = true, features = ["v7"] }
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
rand = "0.8"
parking_lot = "0.12"
futures = "0.3"
ndarray = "0.15"
ndarray-rand = "0.14"
