[package]
name = "omega-persistence"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "SQLite-based persistence layer for ExoGenesis Omega with schema migrations and transactions"

[dependencies]
rusqlite = { version = "0.32", features = ["bundled", "backup"] }
tokio = { version = "1.0", features = ["sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
omega-core = { version = "0.1.0", path = "../omega-core" }

[dev-dependencies]
tempfile = "3.0"
