[package]
name = "omega-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Production runtime orchestrator integrating all ExoGenesis Omega subsystems with health monitoring"

[dependencies]
omega-core = { version = "1.0.0", path = "../omega-core" }
omega-agentdb = { version = "1.0.0", path = "../omega-agentdb" }
omega-memory = { version = "1.0.0", path = "../omega-memory" }
omega-loops = { version = "1.0.0", path = "../omega-loops" }
omega-meta-sona = { version = "1.0.0", path = "../omega-meta-sona" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
parking_lot = "0.12"
rand = "0.8"

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
