[package]
name = "omega-sleep"
description = "Sleep/wake cycle simulation for ExoGenesis Omega - memory consolidation during SWS/REM"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["sleep", "consolidation", "memory", "rem", "sws"]
categories = ["science", "simulation", "algorithms"]

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true

# Sleep-specific dependencies
rand = "0.8"
rand_distr = "0.4"
parking_lot = "0.12"

# Memory integration for sleep consolidation
omega-memory = { version = "1.0.0", path = "../omega-memory" }
omega-hippocampus = { version = "1.0.0", path = "../omega-hippocampus" }

[dev-dependencies]
tokio-test = "0.4"
