[package]
name = "omega-strange-loops"
description = "Self-referential strange loops for ExoGenesis Omega - meta-cognition and self-models"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["strange-loops", "self-reference", "meta-cognition", "consciousness", "hofstadter"]
categories = ["science", "simulation", "algorithms"]

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true

# Strange loops specific
rand = "0.8"
parking_lot = "0.12"

[dev-dependencies]
tokio-test = "0.4"
