[package]
name = "omega-strange-loops"
description = "Self-referential strange loops for ExoGenesis Omega - meta-cognition and self-models"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["strange-loops", "self-reference", "meta-cognition", "consciousness", "hofstadter"]
categories = ["science", "simulation", "algorithms"]

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true

# Strange loops specific
rand = "0.8"
parking_lot = "0.12"

# SIMD acceleration
simsimd = "5.9"

# Memory integration for self-referential tracking
omega-memory = { version = "1.0.0", path = "../omega-memory", optional = true }

[features]
default = []
memory-integration = ["omega-memory"]

[dev-dependencies]
tokio-test = "0.4"
